--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,12 @@
 
 # OS files
 .DS_Store
+*.cmake
+*.txt
+build/CMakeFiles/3.22.0/CMakeDetermineCompilerABI_C.bin
+build/CMakeFiles/3.22.0/CMakeDetermineCompilerABI_CXX.bin
+build/CMakeFiles/3.22.0/CompilerIdC/CMakeCCompilerId.c
+build/CMakeFiles/3.22.0/CompilerIdCXX/CMakeCXXCompilerId.cpp
+build/CMakeFiles/cmake.check_cache
+build/CMakeFiles/CMakeError.log
+build/CMakeFiles/CMakeOutput.log
