--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,20 @@ build/CMakeFiles/3.22.0/CompilerIdCXX/CMakeCXXCompilerId.cpp
 build/CMakeFiles/cmake.check_cache
 build/CMakeFiles/CMakeError.log
 build/CMakeFiles/CMakeOutput.log
+build/CMakeFiles/example.dir/build.make
+build/CMakeFiles/example.dir/compiler_depend.make
+build/CMakeFiles/example.dir/compiler_depend.ts
+build/CMakeFiles/example.dir/depend.make
+build/CMakeFiles/example.dir/examplePYTHON.stamp
+build/CMakeFiles/example.dir/examplePYTHON_wrap.cxx
+build/CMakeFiles/example.dir/flags.make
+build/CMakeFiles/example.dir/progress.make
+build/CMakeFiles/example_swig_compilation.dir/build.make
+build/CMakeFiles/example_swig_compilation.dir/compiler_depend.make
+build/CMakeFiles/example_swig_compilation.dir/compiler_depend.ts
+build/CMakeFiles/example_swig_compilation.dir/CXX.includecache
+build/CMakeFiles/example_swig_compilation.dir/depend.internal
+build/CMakeFiles/example_swig_compilation.dir/depend.make
+build/CMakeFiles/example_swig_compilation.dir/progress.make
+build/CMakeFiles/Makefile2
+build/CMakeFiles/progress.marks
