--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,42 @@
 
 # OS files
 .DS_Store
+build/cmake_install.cmake
+build/CMakeCache.txt
+build/CMakeFiles/3.22.0/CMakeCCompiler.cmake
+build/CMakeFiles/3.22.0/CMakeCXXCompiler.cmake
+build/CMakeFiles/3.22.0/CMakeDetermineCompilerABI_C.bin
+build/CMakeFiles/3.22.0/CMakeDetermineCompilerABI_CXX.bin
+build/CMakeFiles/3.22.0/CMakeSystem.cmake
+build/CMakeFiles/3.22.0/CompilerIdC/CMakeCCompilerId.c
+build/CMakeFiles/3.22.0/CompilerIdCXX/CMakeCXXCompilerId.cpp
+build/CMakeFiles/cmake.check_cache
+build/CMakeFiles/cmake_directory_clean.cmake
+build/CMakeFiles/CMakeDirectoryInformation.cmake
+build/CMakeFiles/CMakeError.log
+build/CMakeFiles/CMakeOutput.log
+build/CMakeFiles/CMakeRuleHashes.txt
+build/CMakeFiles/example.dir/build.make
+build/CMakeFiles/example.dir/cmake_clean.cmake
+build/CMakeFiles/example.dir/compiler_depend.make
+build/CMakeFiles/example.dir/compiler_depend.ts
+build/CMakeFiles/example.dir/depend.make
+build/CMakeFiles/example.dir/DependInfo.cmake
+build/CMakeFiles/example.dir/examplePYTHON.stamp
+build/CMakeFiles/example.dir/examplePYTHON_wrap.cxx
+build/CMakeFiles/example.dir/flags.make
+build/CMakeFiles/example.dir/link.txt
+build/CMakeFiles/example.dir/progress.make
+build/CMakeFiles/example_swig_compilation.dir/build.make
+build/CMakeFiles/example_swig_compilation.dir/cmake_clean.cmake
+build/CMakeFiles/example_swig_compilation.dir/compiler_depend.make
+build/CMakeFiles/example_swig_compilation.dir/compiler_depend.ts
+build/CMakeFiles/example_swig_compilation.dir/CXX.includecache
+build/CMakeFiles/example_swig_compilation.dir/depend.internal
+build/CMakeFiles/example_swig_compilation.dir/depend.make
+build/CMakeFiles/example_swig_compilation.dir/DependInfo.cmake
+build/CMakeFiles/example_swig_compilation.dir/progress.make
+build/CMakeFiles/Makefile.cmake
+build/CMakeFiles/Makefile2
+build/CMakeFiles/progress.marks
+build/CMakeFiles/TargetDirectories.txt
